--- a/src/Backend/Core/Layout/Sass/layouts/_footer.scss
+++ b/src/Backend/Core/Layout/Sass/layouts/_footer.scss
@@ -39,11 +39,11 @@
     margin-left: -430px;
     padding-left: 430px;
     position: absolute;
-    -webkit-transition: padding, margin 250ms;
-    -moz-transition: padding, margin 250ms;
-    -ms-transition: padding, margin 250ms;
-    -o-transition: padding, margin 250ms;
-    transition: padding, margin 250ms;
+    -webkit-transition: padding 250ms, margin 250ms;
+    -moz-transition: padding 250ms, margin 250ms;
+    -ms-transition: padding 250ms, margin 250ms;
+    -o-transition: padding 250ms, margin 250ms;
+    transition: padding 250ms, margin 250ms;
     width: 100%;
   }
 
@@ -61,11 +61,11 @@
     #footer {
       margin-left: -240px;
       padding-left: 240px;
-      -webkit-transition: padding, margin 250ms;
-      -moz-transition: padding, margin 250ms;
-      -ms-transition: padding, margin 250ms;
-      -o-transition: padding, margin 250ms;
-      transition: padding, margin 250ms;
+      -webkit-transition: padding 250ms, margin 250ms;
+      -moz-transition: padding 250ms, margin 250ms;
+      -ms-transition: padding 250ms, margin 250ms;
+      -o-transition: padding 250ms, margin 250ms;
+      transition: padding 250ms, margin 250ms;
     }
 
     .footer-pages #footer {
